# realestate-analytics-dbt

./: .gitignore  README.md  pyproject.toml  readme.md
.github/workflows/: workflow.yaml
docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  run_results.json
property_cro/: .gitignore  dbt_project.yml
property_cro/docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  run_results.json
property_cro/macros/: avg_px_per_loc_and_size_and_age_macro.sql  avg_px_per_loc_and_size_macro.sql  avg_px_per_loc_macro.sql  enriched_ads_base_col_select_macro.sql  inventory_macro.sql  inventory_per_general_location_macro.sql  inventory_per_location_macro.sql  last_ad_time_macro.sql  mv_date_to_quarter_mapping.sql  price_history_macro.sql  reload_table.sql
property_cro/models/: sources.yml
property_cro/models/common/: ad_price_history.sql  ad_price_history_agg.sql  mv_date_to_quarter_mapping.sql  price_changes_per_week.sql  zagreb_locations.sql
property_cro/models/rentals_flats/: 1vw_last_ad_time_rentals_flats.sql  2mv_price_history_rentals_flats.sql  2vw_price_history_rentals_flats.sql  3vw_avg_ask_px_per_loc_rentals_flats.sql  3vw_avg_ask_px_per_loc_size_rentals_flats.sql  3vw_avg_ask_px_per_loc_year_size_rentals_flats.sql  4mv_enriched_ad_rentals_flats.sql
property_cro/models/sales_flats/: 1vw_last_ad_time_sales_flats.sql  2mv_price_history_sales_flats.sql  2vw_price_history_sales_flats.sql  3vw_avg_ask_px_per_loc_sales_flats.sql  3vw_avg_ask_px_per_loc_size_sales_flats.sql  3vw_avg_ask_px_per_loc_year_size_sales_flats.sql  (+1 more)
(+24 files in other folders)
